# oneshotcv

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  test.py
oneshotcv/: Draw.py  __init__.py  palette.py  utils.py
tests/: test_draw.py
